[package]
name = "tg_anti_spam"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "fs", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dotenvy = "0.15"
log = "0.4"
env_logger = "0.11"
grammers-client = "0.7"
grammers-session = "0.7"
clap = { version = "4.0", features = ["derive"] }
